# prmpt

./: README.md  pyproject.toml
examples/: entropy_compression.py
prmpt/cli/: main.py
prmpt/metric/: BERT_metric.py  __init__.py  base.py  token_metric.py
prmpt/pcomp/: __init__.py  autocorrect_comp.py  base.py  entropy_comp.py  lemmatizer_comp.py  logger.py  punctuation_comp.py  sequential.py  utils.py
prmpt/viz/: __init__.py  stringdiff.py
tests/unit_tests/: test_autocorrect_comp.py  test_entropy_comp.py  test_lemmatizer_comp.py  test_punctuation_comp.py  test_sequential.py
tests/unit_tests/data/: prompt1.txt
