[tool.poetry]
name = "prmpt"
version = "0.0.1"
description = ""
authors = ["Vijay Shanmugam <vrs29@cornell.edu>", "Austin Wu <amw423@cornell.edu>"]
readme = "README.md"
packages = [{include = "prmpt"}]

[tool.poetry.scripts]
prmpt = "prmpt.cli.main:main"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
transformers = "^4.27.4"
torch = "^2.0.0"
nltk = "^3.8.1"
tiktoken = "^0.3.3"
autocorrect = "^2.6.1"